--- a/summary/summary.html
+++ b/summary/summary.html
@@ -292,8 +292,7 @@ p_{it} &amp;= \frac{q_{it}}{q_t} \\
 <div id="when-should-we-use-lambda_i" class="section level2">
 <h2>When should we use <span class="math inline">\(\lambda_i\)</span>?</h2>
 <p>The hybrid model that includes a <span class="math inline">\(\lambda_i\)</span> term is rooted in the concept that capacity installed within a nation should contribute to that nation’s learning rate. However, if a nation largely <em>imports</em> the PV panels that are installed domestically, then the learning is more likely occuring in the country where those panels were manufactured.</p>
-<p>The U.S. and Germany serve as an illustrative comparison. Although Germany has a large domestic capacity, it’s domestic <em>production</em> is relatively low. For Germany, a relatively large value for <span class="math inline">\(\lambda_i\)</span> fits the data better, suggesting that Germany’s national installed capacity has contributed more to it’s learning, but that goes against the knowledge that Germany has very limited domestic production. In contrast, a smaller value for <span class="math inline">\(\lambda_i\)</span> fits the U.S. data better, suggesting less learning from national capacity, which is more consistent with the U.S.’s limited PV production.</p>
-<p>So for two countries with sizeable domestic capacities and limited domestic production, why would the same model suggest one has significantly greater domestic learning?</p>
+<p>The U.S. and Germany serve as an illustrative comparison. Both countries have sizeable domestic capacities but limited domestic production. Nonetheless, the values for <span class="math inline">\(\lambda_i\)</span> that best fit the data in each country are in stark contrast. The Germany case suggests considerably large learning from domestic capacity whereas the U.S. case suggests the opposite.</p>
 </div>
 
 
